<resources>
    <string name="app_name">Pixliapp</string>
    <string name="facebook_app_id">1792768987646661</string>
    <string name="title_activity_login">Login</string>
    <string name="terms">By signing up, I agree to Pixli\'s terms and conditons, privacy policies and community guidelines.</string>
    <string name="album_heading">Choose a country</string>
    <string name="fb_login_protocol_scheme">fb1792768987646661</string>
    <string name="openDrawer">Hi bro</string>
    <string name="closeDrawer">Bye bro</string>
    <string-array name="album_type">
        <item>Wedding</item>
        <item>Travel</item>
        <item>Party</item>
        <item>Other</item>

    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="terms_title">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="general_2">We want Pixli to continue to be an authentic and safe place for inspiration and expression. Post only your own photos and videos and always follow the applicable law. Our guidelines play a crucial role and thus we request you to kindly obey these guidelines to keep Pixli running without any difficulty to our other Users. You agree to obey these guidelines when using our products and services (\"Services\"). All capitalised terms used but not defined herein shall have the same meaning as assigned thereto in (i) our Terms and Conditions; or (ii) Privacy Policy, in that order.\n\n We’re committed to these Community Guidelines and we hope you are too. Overstepping these boundaries may result in deleted content, disabled accounts, or other restrictions on the User in accessing the Services. We may investigate and take necessary action from time to time, including deleting User Content or restricting or ceasing a User’s permission to use our Services.\n\n We may alter these guidelines as and when required. So kindly refer to these Community Guidelines regularly.\n</string>
    <string name="unacceptable_use">Unacceptable Use</string>
    <string name="_1_do_not_indulge_in_felonious_activities">1. Do not indulge in Felonious Activities!</string>
    <string name="do_5">Do not use the Site to participate in felonious activities including but not limited to account hijacking, scams, gambling or encourage menacing and/or acts which will harm any person/s and/or any illegal or unlawful acts.</string>
    <string name="_2_do_not_use_malign_products">2. Do not use Malign Products</string>
    <string name="not_5">Do not disseminate viruses, malware, or any other malign or ruinous code that will harm the functionality of the Site.</string>
    <string name="_3_do_not_hijack_other_accounts">3. Do not hijack other accounts</string>
    <string name="hijack_5">Do not access another user’s account without the users’ prior consent. Do not use our products for phishing scams.</string>
    <string name="_4_do_not_circulate_other_s_personal_information">4. Do not circulate other’s Personal Information</string>
    <string name="circulate_5">Do not circulate other people’s confidential details, including but not limited to age, sexual orientation, address, telephone and/or mobile numbers, credit card numbers, personal national ID numbers, or account passwords, without their prior written consent. Information that is already available elsewhere on the Internet or in public records is not considered to be private or confidential under our policies.</string>
    <string name="_5_never_impersonate_or_indulge_in_any_kind_of_fraudulent_behaviour">5. Never Impersonate or Indulge in any kind of Fraudulent Behaviour</string>
    <string name="impersonate_5">The word \'phishing\' is commonly used to describe the offence of electronically impersonating someone else for financial gain. This is frequently done either by using someone else’s login credentials to gain access to protected systems. Do not use our Site to impersonate. You will create an account only for yourself giving truthful information only and not on behalf of another individual. You will not impersonate yourself to be someone else.</string>
    <string name="_6_do_not_use_loathe_speech">6. Do not use Loathe Speech</string>
    <string name="loath_5">Do not upload, post or circulate content that encourages cruelty, insensitivity, dislike or brutality towards groups of people based on their race or ancestral origin, creed, incapacity, gender, age, veteran status, or sexual orientation/ gender identity.</string>
    <string name="_7_do_not_spam">7. Do not Spam</string>
    <string name="spam_5">Do not send spam, including sending undesirable publicizing or commercial data, or undesirable mass solicitation. You shall not create serial accounts for disruptive or abusive purposes, or with overlapping use cases.\n Mass account creation may result in suspension of all related accounts. You may not publish or any third party link which links to malicious content intended to damage or disrupt another User’s browser or computer or to compromise a User’s privacy.</string>
    <string name="_8_never_manipulate_content">8. Never Manipulate Content</string>
    <string name="manipulate_5">Do not manipulate ranking or relevance using strategy like repetitive or deceptive keywords or metadata, offering incentives to review your product or service, or posting fake reviews.\n Do not post or encourage others to post comments which are for any reason whatsoever defamatory, libellous or the like or do not slander, persecute, stalk, intimidate, or which is likely to hurt the religious sentiments of others, or will cause annoyance, inconvenience, danger, obstruction, insult, injury, criminal intimidation, enmity, hatred or ill will or otherwise infringe the legal rights or privacy of others or is in violation of any applicable law for the time being in force.</string>
    <string name="_9_child_protection">9. Child Protection</string>
    <string name="child_5">Do not circulate content that ill-treats children, such as child pornography (including but not limited to cartoon child pornography, child abuse, targets or perpetrators of cyber bullying) or data that represents children in any sexual manner.</string>
    <string name="_10_do_not_post_overly_sexual_uncensored_material">10. Do not post Overly-Sexual Uncensored Material</string>
    <string name="post_5">Do not circulate data that encompasses nudity, graphic sex acts, or sexually uncensored material that are indicated to degrade the allure of human body.\n Do not operate traffic to handle commercial pornography sites. Your profile shall not include adult or derogatory data inappropriate for minors. For example, do not use pictures that exhibit a person’s sexual organs.</string>
    <string name="_11_do_not_resort_to_aggressive_or_bullying_behaviour">11. Do not resort to Aggressive or Bullying Behaviour</string>
    <string name="resort_5">Do not circulate portrayal of unjustified violence.\n Do not menace or bully other users. Online harassment is also an offence and can have serious implications.</string>
    <string name="_12_never_gamble">12. Never Gamble</string>
    <string name="gamble_5">Gambling in India is not permitted. The Information Technology Act, 2000 regulates cyber activities in India and prohibits publication or transmission of information that can corrupt people or illegal or unlawful otherwise.\n Do not give in details that enable online gambling, including sports wager, raffles, or online casinos.</string>
    <string name="_13_legal_rights">13. Legal Rights</string>
    <string name="legal_5">Kindly do not slander, persecute, stalk, intimidate, or otherwise infringe the legal rights (such as rights of privacy and publicity) of others.</string>
    <string name="these_guidelines_are_applicable_to_the_content_you_post_on_our_site">These guidelines are applicable to the content you post on our Site.</string>
    <string name="_14_how_can_you_help_us">14. How can you help us?</string>
    <string name="help_5">i. Each of us is an important part of the Pixli community. If you see something that you think may violate our Terms and Conditions, Privacy Policy, Community Guidelines or other applicable policies, please help us by using our reporting option appearing in your account. Our team reviews these reports and works as quickly as possible to remove content that doesn’t meet any of the Terms and Conditions, Privacy Policy, Community Guidelines or other applicable policies. We may remove content that violates the Terms and Conditions, Privacy Policy, Community Guidelines or other applicable policies or even suspend or terminate the account that has violated the Terms and Conditions, Privacy Policy, Community Guidelines or other applicable policies, depending on the gravity of the violation.\n ii. While addressing your concern or taking any action that you are entitled to, kindly be respectful to others and ensure compliance the Terms and Conditions, Privacy Policy, Community Guidelines or other applicable policies.</string>
</resources>